SearchBar width 100vw, no longer overflowing parent components

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,6 +1,6 @@
 .container { 
     margin-top: 50px;
-    width: 500px;
+    width: 100vw;
     padding: 0;
     display: flex;
     justify-content: center;
